apps/proto-pump-frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proto-pump-frontend
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proto-pump-frontend
  template:
    metadata:
      labels:
        app: proto-pump-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-regcred
      containers:
        - name: frontend
          image: ghcr.io/proto-pump/stage-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "100m"
