apps/proto-pump-frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proto-pump-frontend
  namespace: apps
spec:
  selector:
    app: proto-pump-frontend
  ports:
    - port: 80
      targetPort: 80
