apps/proto-pump-frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proto-pump-frontend
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: proto-pump.skravops.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proto-pump-frontend
                port:
                  number: 80
